aws-appv1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: multicloud
  labels:
    app: app
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  selector:
    app: app
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  labels:
    app: app
    version: v1
  name: app-v1
  namespace: multicloud
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app
        version: v1
      name: app-v1
    spec:
      containers:
        - name: app
          image: gcr.io/hightowerlabs/server:0.0.1
          imagePullPolicy: Always
          args:
            - "-name=aws-cluster-app-v1"
