global-nginx-lb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: global-lb-nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
