gcp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: app
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: app
              servicePort: 80
